Fixed spacing between years on mobile.

--- a/src/pages/AboutUs/AboutUs.scss
+++ b/src/pages/AboutUs/AboutUs.scss
@@ -56,7 +56,7 @@
         }
         
         .year {
-            margin-right: 2rem !important;
+            margin-right: 1rem !important;
 
             h1 {
                 font-size: 3rem !important;
